changelog and bump version

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,14 @@
 Changelog
 =========
 
-1.0dev (unreleased)
+1.1dev
+-------------------
+
+- Packaging
+  [bosim]
+
+
+1.0
 -------------------
 
 - Initial release
