changelog format for zest releaser

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,8 @@
 Changelog
 =========
 
-1.1dev
--------------------
+1.1dev (2014-10-27) Unreleased
+-----------------------------
 
 - Packaging
   [bosim]
